Attempt to internationalize application. Making most of the copies to call the I18n API instead of static texts. This update has been made for views and view helpers as well. Fixes #5.

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,20 +1,20 @@
-<dt><label for="contact_first_name">First name</label></dt>
+<dt><label for="contact_first_name"><%= t '.first_name' %></label></dt>
 <dd><%= text_field :contact, :first_name, :class => 'textfield' -%></dd>
 
-<dt><label for="contact_last_name">Last name</label></dt>
+<dt><label for="contact_last_name"><%= t '.last_name' %></label></dt>
 <dd><%= text_field :contact, :last_name, :class => 'textfield' -%></dd>
 
-<dt><label for="contact_email">Email</label></dt>
+<dt><label for="contact_email"><%= t 'email' %></label></dt>
 <dd><%= text_field :contact, :email, :class => 'textfield' -%></dd>
 
-<dt><label for="contact_mobile_phone">Mobile phone</label></dt>
+<dt><label for="contact_mobile_phone"><%= t '.mobile_phone' %></label></dt>
 <dd><%= text_field :contact, :mobile_phone, :class => 'textfield' -%></dd>
 
-<dt><label for="contact_office_phone">Office phone</label></dt>
+<dt><label for="contact_office_phone"><%= t '.office_phone' %></label></dt>
 <dd><%= text_field :contact, :office_phone, :class => 'textfield' -%></dd>
 
-<dt><label for="contact_affiliation">Affiliation</label></dt>
+<dt><label for="contact_affiliation"><%= t '.affiliation' %></label></dt>
 <dd><%= text_field :contact, :affiliation, :class => 'textfield' -%></dd>
 
-<dt><label for="contact_notes">Notes</label></dt>
+<dt><label for="contact_notes"><%= t '.notes' %></label></dt>
 <dd><%= text_area :contact, :notes, :size => '70x6', :class => 'textarea' -%></dd>
