--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :head do %>
-  <%= javascript_include_tag 'jquery.tools.min.js' -%>
+  <%= javascript_include_tag 'jquery.tools.min.js' %>
 <% end %>
 
 <h2>Admin</h2>
@@ -10,141 +10,145 @@
 <%= error_messages_for :user %>
 
 <ul class="jquery-tabs">
-  <li><a href="#">Groups</a></li>
-  <li><a href="#">Statuses</a></li>
-  <li><a href="#">Priorities</a></li>
-  <li><a href="#">Users</a></li>
+  <li><a href="#"><%= t '.groups' %></a></li>
+  <li><a href="#"><%= t '.statuses' %></a></li>
+  <li><a href="#"><%= t '.priorities' %></a></li>
+  <li><a href="#"><%= t '.users' %></a></li>
 </ul>
 
 <div class="jquery-tab-panes">
   <div class="pane">
-    <h3 class="toggle" id="group-enabled-toggle">Enabled</h3>
-    <% unless @groups_enabled.blank? -%>
+    <h3 class="toggle" id="group-enabled-toggle"><%= t 'enabled' %></h3>
+    <% unless @groups_enabled.blank? %>
     <ul class="admin-list" id="group-enabled-list">
-      <% @groups_enabled.each do |g| -%>
+      <% @groups_enabled.each do |g| %>
         <li>
-          <%= g.name -%>
-          <span><%= link_to 'Disable', { :action=> 'toggle_group', :controller => 'admin', :id => g.id }, :class => 'disable', :method => :post, :confirm => "Really disable #{g.name} group?" -%></span>
+          <%= g.name %>
+          <span><%= link_to t( 'disable' ), { :action=> 'toggle_group', :controller => 'admin', :id => g.id }, :class => 'disable', :method => :post, :confirm => t( '.really_disable_group', :group => g.name ) %></span>
         </li>
-      <% end -%>
+      <% end %>
     </ul>
-    <% end -%>
-    <h3 class="toggle" id="group-disabled-toggle">Disabled</h3>
-    <% unless @groups_disabled.blank? -%>
+    <% end %>
+    <h3 class="toggle" id="group-disabled-toggle"><%= t 'disabled' %></h3>
+    <% unless @groups_disabled.blank? %>
     <ul class="admin-list" id="group-disabled-list">
-      <% @groups_disabled.each do |g| -%>
+      <% @groups_disabled.each do |g| %>
         <li>
-          <%= g.name -%>
-          <span><%= link_to 'Enable', { :action=> 'toggle_group', :controller => 'admin', :id => g.id }, :class => 'enable', :method => :post, :confirm => "Really enable #{g.name} group?" -%></span>
+          <%= g.name %>
+          <span><%= link_to t( 'enable' ), { :action=> 'toggle_group', :controller => 'admin', :id => g.id }, :class => 'enable', :method => :post, :confirm => t( '.really_enable_group', :group => g.name ) %></span>
         </li>
-      <% end -%>
+      <% end %>
     </ul>
-    <% end -%>
-    <% form_for Group.new, :url => { :action => 'add_group', :controller => 'admin' }, :html => { :class => 'admin-form' } do |f| -%>
+    <% end %>
+    <% form_for Group.new, :url => { :action => 'add_group', :controller => 'admin' }, :html => { :class => 'admin-form' } do |f| %>
       <p>
-        <%= f.text_field :name, :class => 'textfield' -%>
-        <%= f.submit "Add Group", :class => 'button' -%>
+        <%= f.text_field :name, :class => 'textfield' %>
+        <%= f.submit t( 'button.add_group' ), :class => 'button' %>
       </p>
-    <% end -%>
+    <% end %>
   </div>
   <div class="pane">
-    <h3 class="toggle" id="status-enabled-toggle">Enabled</h3>
-    <% unless @statuses_enabled.blank? -%>
+    <h3 class="toggle" id="status-enabled-toggle"><%= t 'enabled' %></h3>
+    <% unless @statuses_enabled.blank? %>
     <ul class="admin-list" id="status-enabled-list">
-      <% @statuses_enabled.each do |s| -%>
+      <% @statuses_enabled.each do |s| %>
         <li>
-          <%= s.name -%>
-          <span><%= link_to 'Disable', { :action=> 'toggle_status', :controller => 'admin', :id => s.id }, :class => 'disable', :method => :post, :confirm => "Really disable #{s.name} status?" -%></span>
+          <%= s.name %>
+          <span><%= link_to t( 'disable' ), { :action=> 'toggle_status', :controller => 'admin', :id => s.id }, :class => 'disable', :method => :post, :confirm => t( '.really_disable_status', :status => s.name ) %></span>
         </li>
-      <% end -%>
+      <% end %>
     </ul>
-    <% end -%>
-    <h3 class="toggle" id="status-disabled-toggle">Disabled</h3>
-    <% unless @statuses_disabled.blank? -%>
+    <% end %>
+    <h3 class="toggle" id="status-disabled-toggle"><%= t 'disabled' %></h3>
+    <% unless @statuses_disabled.blank? %>
     <ul class="admin-list" id="status-disabled-list">
-      <% @statuses_disabled.each do |s| -%>
+      <% @statuses_disabled.each do |s| %>
         <li>
-          <%= s.name -%>
-          <span><%= link_to 'Enable', { :action=> 'toggle_status', :controller => 'admin', :id => s.id }, :class => 'enable', :method => :post, :confirm => "Really enable #{s.name} status?" -%></span>
+          <%= s.name %>
+          <span><%= link_to t( 'enable' ), { :action=> 'toggle_status', :controller => 'admin', :id => s.id }, :class => 'enable', :method => :post, :confirm => t( '.really_enable_status', :status => s.name ) %></span>
         </li>
-      <% end -%>
+      <% end %>
     </ul>
-    <% end -%>
-    <% form_for Status.new, :url => { :action => 'add_status', :controller => 'admin' }, :html => { :class => 'admin-form' } do |f| -%>
+    <% end %>
+    <% form_for Status.new, :url => { :action => 'add_status', :controller => 'admin' }, :html => { :class => 'admin-form' } do |f| %>
       <p>
-        <%= f.text_field :name, :class => 'textfield' -%>
-        <%= f.submit "Add Status", :class => 'button' -%>
+        <%= f.text_field :name, :class => 'textfield' %>
+        <%= f.submit t( 'button.add_status' ), :class => 'button' %>
       </p>
-    <% end -%>
+    <% end %>
   </div>
   <div class="pane">
-    <h3 class="toggle" id="priority-enabled-toggle">Enabled</h3>
-    <% unless @priorities_enabled.blank? -%>
+    <h3 class="toggle" id="priority-enabled-toggle"><%= t 'enabled' %></h3>
+    <% unless @priorities_enabled.blank? %>
     <ul class="admin-list" id="priority-enabled-list">
-      <% @priorities_enabled.each do |p| -%>
+      <% @priorities_enabled.each do |p| %>
         <li>
-          <%= p.name -%>
-          <span><%= link_to 'Disable', { :action=> 'toggle_priority', :controller => 'admin', :id => p.id }, :class => 'disable', :method => :post, :confirm => "Really disable #{p.name} priority?" -%></span>
+          <%= p.name %>
+          <span><%= link_to t( 'disable' ), { :action=> 'toggle_priority', :controller => 'admin', :id => p.id }, :class => 'disable', :method => :post, :confirm => t( '.really_disable_priority', :priority => p.name ) %></span>
         </li>
-      <% end -%>
+      <% end %>
     </ul>
-    <% end -%>
-    <h3 class="toggle" id="priority-disabled-toggle">Disabled</h3>
-    <% unless @priorities_disabled.blank? -%>
+    <% end %>
+    <h3 class="toggle" id="priority-disabled-toggle"><%= t 'disabled' %></h3>
+    <% unless @priorities_disabled.blank? %>
     <ul class="admin-list" id="priority-disabled-list">
-      <% @priorities_disabled.each do |p| -%>
+      <% @priorities_disabled.each do |p| %>
         <li>
-          <%= p.name -%>
-          <span><%= link_to 'Enable', { :action=> 'toggle_priority', :controller => 'admin', :id => p.id }, :class => 'enable', :method => :post, :confirm => "Really enable #{p.name} priority?" -%></span>
+          <%= p.name %>
+          <span><%= link_to t( 'enable' ), { :action=> 'toggle_priority', :controller => 'admin', :id => p.id }, :class => 'enable', :method => :post, :confirm => t( '.really_enable_priority', :priority => p.name ) %></span>
         </li>
-      <% end -%>
+      <% end %>
     </ul>
-    <% end -%>
-    <% form_for Priority.new, :url => { :action => 'add_priority', :controller => 'admin' }, :html => { :class => 'admin-form' } do |f| -%>
+    <% end %>
+    <% form_for Priority.new, :url => { :action => 'add_priority', :controller => 'admin' }, :html => { :class => 'admin-form' } do |f| %>
       <p>
-        <%= f.text_field :name, :class => 'textfield' -%>
-        <%= f.submit "Add Priority", :class => 'button' -%>
+        <%= f.text_field :name, :class => 'textfield' %>
+        <%= f.submit t( 'button.add_priority' ), :class => 'button' %>
       </p>
-    <% end -%>
+    <% end %>
   </div>
   <div class="pane">
-    <% form_for :user, :url => { :action => 'add_user', :controller => 'admin' }, :html => { :id => 'add-user', :class => 'admin-form' } do |f| -%>
+    <% form_for :user, :url => { :action => 'add_user', :controller => 'admin' }, :html => { :id => 'add-user', :class => 'admin-form' } do |f| %>
       <p>
-        <label for="user_username">Username</label>
-        <%= f.text_field :username, :size => 30, :class => 'textfield' -%>
+      <label for="user_username"><%= t 'username' %></label>
+        <%= f.text_field :username, :size => 30, :class => 'textfield' %>
       </p>
       <p>
-        <label for="user_first_name">First name</label>
-        <%= f.text_field :first_name, :size => 30, :class => 'textfield' -%>
+        <label for="user_first_name"><%= t 'users.users.first_name' %></label>
+        <%= f.text_field :first_name, :size => 30, :class => 'textfield' %>
       </p>
       <p>
-        <label for="user_last_name">Last name</label>
-        <%= f.text_field :last_name, :size => 30, :class => 'textfield' -%>
+        <label for="user_last_name"><%= t 'users.users.last_name' %></label>
+        <%= f.text_field :last_name, :size => 30, :class => 'textfield' %>
       </p>
       <p>
-        <label for="user_time_zone">Time zone</label>
-        <%= f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, { :default => 'Central Time (US & Canada)' }, { :class => 'selectbox' } -%>
+        <label for="user_language"><%= t 'users.users.language' %></label>
+        <%= f.select :language, available_locales, {}, :class => 'selectbox' %>
       </p>
       <p>
-        <label for="user_email">Email</label>
-        <%= f.text_field :email, :size => 30, :class => 'textfield' -%>
+        <label for="user_time_zone"><%= t 'users.users.timezone' %></label>
+        <%= f.time_zone_select :time_zone, ActiveSupport::TimeZone.us_zones, { :default => 'Central Time (US & Canada)' }, { :class => 'selectbox' } %>
       </p>
       <p>
-        <label for="user_email_confirmation">Confirm Email</label>
-        <%= f.text_field :email_confirmation, :size => 30, :class => 'textfield' -%>
+        <label for="user_email"><%= t 'email' %></label>
+        <%= f.text_field :email, :size => 30, :class => 'textfield' %>
       </p>
       <p>
-        <label for="user_password">Password</label>
-        <%= f.password_field :password, :size => 30, :class => 'textfield' -%>
+        <label for="user_email_confirmation"><%= t 'confirm_email' %></label>
+        <%= f.text_field :email_confirmation, :size => 30, :class => 'textfield' %>
       </p>
       <p>
-        <label for="user_password_confirmation">Confirm Password</label>
-        <%= f.password_field :password_confirmation, :size => 30, :class => 'textfield' -%>
+        <label for="user_password"><%= t 'password' %></label>
+        <%= f.password_field :password, :size => 30, :class => 'textfield' %>
       </p>
       <p>
-        <%= f.submit 'Add User', :class => 'button' -%>
+        <label for="user_password_confirmation"><%= t 'confirm_password' %></label>
+        <%= f.password_field :password_confirmation, :size => 30, :class => 'textfield' %>
       </p>
-    <% end -%>
+      <p>
+        <%= f.submit t( 'button.add_user' ), :class => 'button' %>
+      </p>
+    <% end %>
   </div>
 </div>
 
