--- a/app/views/contacts/_contacts.html.erb
+++ b/app/views/contacts/_contacts.html.erb
@@ -1,19 +1,19 @@
 <table class="listing" cellspacing="0">
   <tr class="header">
-    <th>Name</th>
-    <th>Affiliation</th>
-    <th>Disabled at</th>
+    <th><%= t '.name' %></th>
+    <th><%= t '.affiliation' %></th>
+    <th><%= t '.disabled_at' %></th>
   </tr>
-  <% @contacts.each do |contact| -%>
-  <tr class="<%= cycle("list-line-odd", "list-line-even") -%>">
-    <td><%= link_to h(contact.full_name), contact -%></td>
-    <td><%=h contact.affiliation -%></td>
-    <td><%= nice_date contact.disabled_at unless contact.enabled? -%></td>
+  <% @contacts.each do |contact| %>
+  <tr class="<%= cycle("list-line-odd", "list-line-even") %>">
+    <td><%= link_to h(contact.full_name), contact %></td>
+    <td><%=h contact.affiliation %></td>
+    <td><%= nice_date contact.disabled_at unless contact.enabled? %></td>
   </tr>
-  <% end -%>
+  <% end %>
 </table>
 
 <%= will_paginate @contacts, :previous_label => '&#8249;', :next_label => '&#8250;' %>
-<% if @total_contacts -%>
-  <div style="margin: 6px 0; font-style: italic; color: #333; text-align:center;"><%=@total_contacts %> <%= @total_contacts == 1 ? "contact" : "contacts" %> found.</div>
-<% end -%>
+<% if @total_contacts %>
+  <div style="margin: 6px 0; font-style: italic; color: #333; text-align:center;"><%= @total_contacts == 1 ? t( 'contacts.x_contacts_found.one' ) : t( 'contacts.x_contacts_found.other', :count => @total_contacts ) %>.</div>
+<% end %>
