--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,9 +1,9 @@
-<h2>New contact</h2>
+<h2><%= t '.new_contact' %></h2>
 
 <% form_for(@contact) do |f| %>
   <%= f.error_messages %>
   <dl>
     <%= render :partial => 'form' -%>
-    <dd><%= f.submit "Create", :class => "button" -%>&nbsp;&nbsp;<%= link_to 'Cancel', contacts_path -%></dd>
+    <dd><%= f.submit t( 'button.create' ), :class => "button" -%>&nbsp;&nbsp;<%= link_to t( 'cancel' ), contacts_path -%></dd>
   </dl>
 <% end -%>
