--- a/app/views/contacts/show.html.erb
+++ b/app/views/contacts/show.html.erb
@@ -1,34 +1,34 @@
 <div class="right" id="controls">
-  <%= link_to 'Edit', edit_contact_path, :class => "edit-contact", :title => 'Edit contact' -%> |
+  <%= link_to t( '.edit' ), edit_contact_path, :class => "edit-contact", :title => t( '.edit_contact' ) -%> |
   <% if @current_user.admin? -%>
     <% unless @contact.enabled? -%>
-      <%= link_to 'Enable', toggle_contact_path, :confirm => "Really enable contact #{@contact.full_name}?", :method => :post, :class => 'enable', :title => 'Enable contact' -%> |
+      <%= link_to t( 'enable' ), toggle_contact_path, :confirm => t( '.really_enable_contact_x', :contact => @contact.full_name ), :method => :post, :class => 'enable', :title => t( '.enable_contact' ) -%> |
     <% else -%>
-      <%= link_to 'Disable', toggle_contact_path, :confirm => "Really disable contact #{@contact.full_name}?", :method => :post, :class => 'disable', :title => 'Disable contact' -%> |
+      <%= link_to t( 'disable' ), toggle_contact_path, :confirm => t( '.really_disable_contact_x', :contact => @contact.full_name ), :method => :post, :class => 'disable', :title => t( '.disable_contact' ) -%> |
     <% end -%>
   <% end -%>
-  <%= link_to 'Back', :back, :class => 'back', :title => 'Go back' -%>
+  <%= link_to t( 'back' ), :back, :class => 'back', :title => t( 'back' ) -%>
 </div>
 
 <h2<%= @contact.enabled? ? '' : ' class="disabled"' -%>><%=h @contact.full_name -%></h2>
 
 <table class="profile <%= @contact.enabled? ? '' : 'disabled' -%>">
   <tr>
-    <td class="field">First name:</td><td class="value"><%=h @contact.first_name -%></td>
-    <td class="field">Last name:</td><td class="value"><%=h @contact.last_name -%></td>
+    <td class="field"><%= t 'contacts.form.first_name' %>:</td><td class="value"><%=h @contact.first_name -%></td>
+    <td class="field"><%= t 'contacts.form.last_name' %>:</td><td class="value"><%=h @contact.last_name -%></td>
   </tr>
   <tr>
-    <td class="field">Email:</td><td class="value"><%=h @contact.email -%></td>
-    <td class="field">Affiliation:</td><td class="value"><%=h @contact.affiliation -%></td>
+    <td class="field"><%= t 'email' %>:</td><td class="value"><%=h @contact.email -%></td>
+    <td class="field"><%= t 'contacts.form.affiliation' %>:</td><td class="value"><%=h @contact.affiliation -%></td>
   </tr>
   <tr>
-    <td class="field">Mobile phone:</td><td class="value"><%= h @contact.mobile_phone -%></td>
-    <td class="field">Office phone:</td><td class="value"><%=h @contact.office_phone -%></td>
+    <td class="field"><%= t 'contacts.form.mobile_phone' %>:</td><td class="value"><%= h @contact.mobile_phone -%></td>
+    <td class="field"><%= t 'contacts.form.office_phone' %>:</td><td class="value"><%=h @contact.office_phone -%></td>
   </tr>
   <tr>
-    <td class="field">Updated at:</td>
+    <td class="field"><%= t 'updated_at' %>:</td>
     <td class="value" colspan="3"><%= nice_date @contact.updated_at -%></td>
   </tr>
-  <tr><td class="field-row" colspan="4">Notes:</td></tr>
+  <tr><td class="field-row" colspan="4"><%= t 'contacts.form.notes' %>:</td></tr>
   <tr><td class="value-row" colspan="4"><%= simple_format(@contact.notes) -%></td></tr>
 </table>
