--- a/app/views/tickets/edit.html.erb
+++ b/app/views/tickets/edit.html.erb
@@ -1,3 +1,3 @@
-<h2>Editing ticket #<%= @ticket.id -%></h2>
+<h2><%= t '.editing_ticket', :number => @ticket.id %></h2>
 
-<%= render :partial => 'form', :locals => { :ticket => @ticket, :button_name => 'Update' } -%>
+<%= render :partial => 'form', :locals => { :ticket => @ticket, :button_name => t( 'button.update' ) } %>
