--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,25 +1,25 @@
 <% content_for :head do %>
-<%= javascript_include_tag 'pagination' %>
+  <%= javascript_include_tag 'pagination' %>
 <% end %>
 
 <% content_for :ticket_filter do %>
-<%= render 'ticket_filter' -%>
+  <%= render 'ticket_filter' %>
 <% end %>
 
 <% content_for :button_list do %>
-<div class="right-container">
-  <%= button_to 'New ticket', new_ticket_path, :method => :get, :class => "green button" %>
-  <%= button_to 'New contact', new_contact_path, :method => :get, :class => "green button" %>
-</div>
+  <div class="right-container">
+    <%= button_to t( 'button.new_ticket' ), new_ticket_path, :method => :get, :class => "green button" %>
+    <%= button_to t( 'button.new_contact' ), new_contact_path, :method => :get, :class => "green button" %>
+  </div>
 <% end %>
 
-<h2 class="left">Tickets</h2>
+<h2 class="left"><%= t '.tickets' %></h2>
 
-<% if @tickets.length < 1 -%>
+<% if @tickets.length < 1 %>
   <br class="clear"/>
-  <p>No tickets found.</p>
-<% else -%>
-<div id="tickets">
-  <%= render 'tickets' -%>
-</div>
-<% end -%>
+  <p><%= t '.no_tickets_found' %></p>
+<% else %>
+  <div id="tickets">
+    <%= render 'tickets' %>
+  </div>
+<% end %>
