--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,3 +1,3 @@
-<h2>New ticket</h2>
+<h2><%= t '.new_ticket' %></h2>
 
-<%= render :partial => 'form', :locals => { :ticket => @ticket, :button_name => 'Create' } -%>
+<%= render :partial => 'form', :locals => { :ticket => @ticket, :button_name => t( 'button.create' ) } %>
