--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,88 +1,88 @@
 <% content_for :button_list do %>
-<div class="right-container">
-  <%= button_to 'New ticket', new_ticket_path, :method => :get, :class => 'green button' -%>
-  <%= button_to 'New contact', new_contact_path, :method => :get, :class => 'green button' -%>
-</div>
+  <div class="right-container">
+    <%= button_to t( 'button.new_ticket' ), new_ticket_path, :method => :get, :class => 'green button' %>
+    <%= button_to t( 'button.new_contact' ), new_contact_path, :method => :get, :class => 'green button' %>
+  </div>
 <% end %>
 
 <div class="right" id="controls">
-<%= link_to 'Edit', edit_ticket_path(@ticket), :class => 'edit-ticket', :title => 'Edit ticket' -%> |
-<%= link_to 'Pdf', ticket_path(@ticket, :format => 'pdf'), :class => 'pdf', :title => 'Download pdf' -%> |
-<% if @alert.nil? -%>
-  <%= link_to 'Add Alert', { :controller => 'alerts', :action => 'create', :id => @ticket.id }, :confirm => "Really add alert for ticket ##{@ticket.id}?", :method => :post, :class => 'add-alert', :title => 'Add ticket alert' -%> |
-<% else -%>
-  <%= link_to 'Remove Alert', { :action => 'destroy', :controller => 'alerts', :id => @alert.id }, :confirm => "Really remove alert for ticket ##{@ticket.id}?", :method => :delete, :class => 'delete-alert', :title => 'Remove alert' -%> |
-<% end -%>
-<%= link_to_function 'Add Comment', "$('#add-comment').slideToggle();", :class => 'add-comment', :title => 'Add comment' -%> |
-<%= link_to_function 'Add Attachment', "$('#add-attachment').slideToggle();", :class => 'add-attach', :title => 'Add attachment' -%> |
-<% if @current_user.admin? -%>
-  <%= link_to 'Delete', @ticket, :confirm => "Really delete ticket ##{@ticket.id} and all its associated data?", :method => :delete, :class => 'delete', :title => 'Delete ticket' -%> |
-<% end -%>
-<%= link_to 'Back', :back, :class => 'back', :title => 'Go back' -%>
+  <%= link_to t( 'edit' ), edit_ticket_path(@ticket), :class => 'edit-ticket', :title => t( '.edit_ticket' ) %> |
+  <%= link_to t( '.pdf' ), ticket_path(@ticket, :format => 'pdf'), :class => 'pdf', :title => t( '.download_pdf' ) %> |
+  <% if @alert.nil? %>
+    <%= link_to t( '.add_alert' ), { :controller => 'alerts', :action => 'create', :id => @ticket.id }, :confirm => t( '.really_add_alert', :number => @ticket.id ), :method => :post, :class => 'add-alert', :title => t( '.add_ticket_alert' ) %> |
+  <% else %>
+    <%= link_to t( '.remove_alert' ), { :action => 'destroy', :controller => 'alerts', :id => @alert.id }, :confirm => t( '.really_remove_alert', :number => @ticket.id ), :method => :delete, :class => 'delete-alert', :title => t( '.remove_ticket_alert' ) %> |
+  <% end %>
+  <%= link_to_function t( '.add_comment' ), "$('#add-comment').slideToggle();", :class => 'add-comment', :title => t( '.add_comment' ) %> |
+  <%= link_to_function t( '.add_attachment' ), "$('#add-attachment').slideToggle();", :class => 'add-attach', :title => t( '.add_attachment' ) %> |
+  <% if @current_user.admin? %>
+    <%= link_to t( 'delete' ), @ticket, :confirm => t( '.really_delete_ticket', :number => @ticket.id ), :method => :delete, :class => 'delete', :title => t( '.delete_ticket' ) %> |
+  <% end %>
+  <%= link_to t( 'back' ), :back, :class => 'back', :title => t( 'back' ) %>
 </div>
 
-<h2 class="left <%= @ticket.closed? ? 'disabled' : '' -%>">Ticket #<%= @ticket.id -%></h2>
+<h2 class="left <%= @ticket.closed? ? 'disabled' : '' %>">Ticket #<%= @ticket.id %></h2>
 <br class="clear"/>
 
 <%= error_messages_for :comment %>
 <%= error_messages_for :attachment %>
 
 
-<table class="profile <%= @ticket.closed? ? 'disabled' : '' -%>">
-  <tr><td class="field">Title:</td><td colspan="3" class="value"><%=h @ticket.title -%></td></tr>
+<table class="profile <%= @ticket.closed? ? 'disabled' : '' %>">
+  <tr><td class="field"><%= t 'tickets.title' %>:</td><td colspan="3" class="value"><%=h @ticket.title %></td></tr>
   <tr>
-    <td class="field">Contact:</td><td class="value"><%= link_to @ticket.contact.full_name, contact_path(@ticket.contact.id) -%></td>
-    <td class="field">Created by:</td><td class="value"><%= link_to @ticket.creator.username, user_path(@ticket.creator.id) unless @ticket.creator.nil? -%></td>
+    <td class="field"><%= t 'tickets.contact' %>:</td><td class="value"><%= link_to @ticket.contact.full_name, contact_path(@ticket.contact.id) %></td>
+    <td class="field"><%= t '.created_by' %>:</td><td class="value"><%= link_to @ticket.creator.username, user_path(@ticket.creator.id) unless @ticket.creator.nil? %></td>
   </tr>
   <tr>
-    <td class="field">Created at:</td><td class="value"><%= nice_date @ticket.created_at -%></td>
-    <td class="field">Updated at:</td><td class="value"><%= nice_date @ticket.updated_at -%></td>
+    <td class="field"><%= t 'created_at' %>:</td><td class="value"><%= nice_date @ticket.created_at %></td>
+    <td class="field"><%= t 'updated_at' %>:</td><td class="value"><%= nice_date @ticket.updated_at %></td>
   </tr>
   <tr>
-    <td class="field">Owner:</td><td class="value"><%= link_to @ticket.owner.username, user_path(@ticket.owner.id) unless @ticket.owner.nil? %></td>
-    <td class="field">Group:</td><td class="value"><%= @ticket.group.name unless @ticket.group.nil? -%></td>
+    <td class="field"><%= t 'tickets.owner' %>:</td><td class="value"><%= link_to @ticket.owner.username, user_path(@ticket.owner.id) unless @ticket.owner.nil? %></td>
+    <td class="field"><%= t 'tickets.group' %>:</td><td class="value"><%= @ticket.group.name unless @ticket.group.nil? %></td>
   </tr>
   <tr>
-    <td class="field">Status:</td><td class="value"><%= @ticket.status.name -%></td>
-    <td class="field">Priority:</td><td class="value"><%= @ticket.priority.name -%></td>
+    <td class="field"><%= t 'tickets.status' %>:</td><td class="value"><%= @ticket.status.name %></td>
+    <td class="field"><%= t 'tickets.priority' %>:</td><td class="value"><%= @ticket.priority.name %></td>
   </tr>
   <% if @ticket.closed? %>
-  <tr><td class="field">Closed at:</td><td colspan="3" class="value"><%= nice_date @ticket.closed_at unless @ticket.closed_at.nil? %></td></tr>
+    <tr><td class="field"><%= t 'tickets.closed_at' %>:</td><td colspan="3" class="value"><%= nice_date @ticket.closed_at unless @ticket.closed_at.nil? %></td></tr>
   <% end %>
-  <tr><td class="field-row" colspan="4">Details:</td></tr>
-  <tr><td class="value-row" colspan="4"><%= simple_format(@ticket.details) -%></td></tr>
+  <tr><td class="field-row" colspan="4"><%= t 'tickets.details' %>:</td></tr>
+  <tr><td class="value-row" colspan="4"><%= simple_format(@ticket.details) %></td></tr>
 </table>
 
 <div id="add-comment">
-<% form_for [@ticket, Comment.new] do |f| %>
-  <p>
+  <% form_for [@ticket, Comment.new] do |f| %>
+    <p>
     <%= f.text_area :comment, :size => "70x6", :class => "textarea" %>
-  </p>
-  <p id="close-check"><%= check_box_tag(:close_ticket) -%>  <%= label_tag(:close_ticket, "Close ticket with this comment") -%></p>
-  <p><%= f.submit "Add Comment", :class => "button" %>&nbsp;&nbsp;<%= link_to_function "Cancel", "$('#add-comment').slideToggle();" -%></p>
-<% end %>
+    </p>
+    <p id="close-check"><%= check_box_tag(:close_ticket) %>  <%= label_tag(:close_ticket, t( '.close_ticket_with_comment' )) %></p>
+    <p><%= f.submit t( 'button.add_comment' ), :class => "button" %>&nbsp;&nbsp;<%= link_to_function t( 'cancel' ), "$('#add-comment').slideToggle();" %></p>
+  <% end %>
 </div>
 
 <div id="add-attachment">
   <% form_for [@ticket, Attachment.new], :html => { :multipart => true } do |a| %>
     <p>
-      <%= a.file_field :data %>
-      <span id="attachment_limit"><%= "Limit #{APP_CONFIG['attachment_size_limit']} megabytes" %></span>
+    <%= a.file_field :data %>
+    <span id="attachment_limit"><%= t '.limit_x_megabytes', :amount => APP_CONFIG[ 'attachment_size_limit' ] %></span>
     </p>
-    <p><%= a.submit "Add Attachment", :class => "button" %>&nbsp;&nbsp;<%= link_to_function "Cancel", "$('#add-attachment').slideToggle();" -%></p>
+    <p><%= a.submit t( 'button.add_attachment' ), :class => "button" %>&nbsp;&nbsp;<%= link_to_function t( 'cancel' ), "$('#add-attachment').slideToggle();" %></p>
   <% end %>
 </div>
 
-<% unless @ticket.attachments.empty? -%>
-  <h3 class="toggle" id="attachments-toggle">Attachments</h3>
+<% unless @ticket.attachments.empty? %>
+  <h3 class="toggle" id="attachments-toggle"><%= t '.attachments' %></h3>
   <div id="attachment-list">
-    <ul><%= render :partial => @ticket.attachments, :locals => { :ticket => @ticket } -%></ul>
+    <ul><%= render :partial => @ticket.attachments, :locals => { :ticket => @ticket } %></ul>
   </div>
-<% end -%>
+<% end %>
 
-<% unless @ticket.comments.empty? -%>
+<% unless @ticket.comments.empty? %>
   <h3 class="toggle" id="comments-toggle">Comments</h3>
   <div id="comment-list">
-    <%= render :partial => @ticket.comments, :locals => { :ticket => @ticket } -%>
+    <%= render :partial => @ticket.comments, :locals => { :ticket => @ticket } %>
   </div>
-<% end -%>
+<% end %>
