--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,5 +3,15 @@
  * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
  * the top of the compiled file, but it's generally better to create a new file per style scope.
  *= require_self
- *= require_tree . 
 */
+@import "bootstrap";
+@import "mixins.css.scss";
+@import "sessions.css.scss";
+@import "dashboard.css.scss";
+
+body { background: #eee url(image_path('bg.png')); }
+
+.alert, .notice { color: #c00; font-weight: bold; margin-bottom: 16px; }
+.notice { color: #585; }
+
+.btn { font-weight: bold; }
