--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,7 +10,7 @@
 @import "dashboard.css.scss";
 
 body {
-  background: #eee url(image_path('bg.png'));
+  background: #eee url(image_path('cross_scratches.png'));
 }
 
 .btn {
@@ -25,13 +25,9 @@ body {
   @include box-shadow(0 1px 2px rgba(0,0,0,0.30));
 }
 
-.secondary-nav p {
-  color: #777;
-}
-
 footer {
   border-top: none;
-  margin-top: 0;
+  margin-top: 10px;
 }
 
 footer p {
