--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,19 +7,16 @@
     = javascript_include_tag 'application'
     = csrf_meta_tag
   %body{id: params[:controller].parameterize.dasherize + "-controller"}
-    .topbar
-      .fill
+    .navbar.navbar-fixed-top
+      .navbar-inner
         .container
           %h3.brand= t(:app_title)
           %ul.nav
             %li{class: active_nav_class(controller.controller_name, 'Dashboard')}
               = link_to 'Dashboard', root_path
-          %ul.nav.secondary-nav
-            %li
-              /= link_to 'Sign out', destroy_admin_session_path, confirm: 'Really sign out?', method: :delete
-              = link_to t(:sign_out), sign_out_path, confirm: t(:confirm_sign_out), method: :delete
-          .secondary-nav
-            %p.pull-right #{t(:signed_in_as)} #{current_user.email} |
+          %p.navbar-text.pull-right
+            #{t(:signed_in_as)} #{current_user.email} &nbsp;|&nbsp;
+            = link_to t(:sign_out), sign_out_path, confirm: t(:confirm_sign_out), method: :delete
     .container
       .content
         = render partial: 'shared/flash', locals: { flash: flash }
