--- a/app/views/shared/_flash.html.haml
+++ b/app/views/shared/_flash.html.haml
@@ -1,4 +1,4 @@
 - flash.each do |name, msg|
-  %div(class="alert-message #{name} fade in" data-alert='alert')
+  %div(class="alert alert-#{name} fade in")
+    %a(href="#" data-dismiss="alert" class="close") &times;
     = msg
-    = link_to '×', '#', class: 'close'
